# WineBotAppBuilder

./: .actrc  .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  LICENSE  LINT_POLICY.md  Makefile  ORGANIZATION_POLICY.md  README.md  STATE.md  STATUS-2026-02-10.md  STATUS-2026-02-13.md  STATUS-2026-02-17.md  STATUS-2026-02-18.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: approved-issues-only.yml  approved-prs-only.yml  ci.yml  e2e-real.yml  policy-preflight-trend-gate-optin.yml  publish-ghcr.yml  release.yml  tla-skeleton-contract-optin.yml
agent-sandbox/state/: sbom-repo.cdx.json
core/: discovery.py  scm.py  wbab_core.py
deploy/daemon/: authz-policy.example.json  wbabd.container.env.example  wbabd.systemd.env.example
docs/: BRINGUP.md  CONTEXT_BUNDLE.md  CONTRACTS.md  DAEMON_API_SECURITY_PLAN.md  DAEMON_DEPLOY_PROFILE.md  FORMAL_MODEL_HOWTO.md  STATE.md  USER_GUIDE.md
docs/DECISIONS/: 0001-scope-and-goals.md
formal/tla/: DaemonIdempotency.cfg  DaemonIdempotency.tla  README.md
samples/validation-app/: .clang-tidy  CMakeLists.txt  cli.cpp  core.cpp  core.h  gui.cpp  installer.nsi  tests.cpp
scripts/: bootstrap-submodule.sh  lint-container.sh  lint.sh
scripts/publish/: dockerfiles-drycheck.sh
scripts/security/: daemon-pki.sh  (+3 more)
tests/: test_wbabd_concurrency.py
tools/: compose.sh  package-nsis.sh  sign-dev.sh  wbab  wbabd  winbuild-build.sh  winbuild-lint.sh  winbuild-test.sh  winebot-smoke.sh  winebot-trust-dev-cert.sh  winebot.ghcr.override.yml
(+108 files in other folders)
